This may be my best form yet

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,6 @@
-<html>
-  <head>
+{% extends "shared/base.html" %}
 
-  </head>
-  <body>
-    Hello, world!
-  </body>
-</html>
+{% block content %}
+<h1>The USC Face Study</h1>
+Welcome to the USC Face Study.
+{% endblock %}
