--- a/home/static/css/_forms.scss
+++ b/home/static/css/_forms.scss
@@ -62,9 +62,22 @@ button[disabled=disabled], button:disabled {
   }
 }
 
+.hint {
+  padding-top: 8px;
+  color: #666;
+
+  span {
+    display: block;
+  }
+
+  ul {
+    margin-top: 8px;
+  }
+}
+
 #register {
 
-  #name, #about, #age-sex {
+  #name, #about, #age-sex, #passwords {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -89,6 +102,10 @@ button[disabled=disabled], button:disabled {
         padding-bottom: 0.45em;
       }
     }
+  }
+
+  #passwords {
+    margin-top: 1rem;
   }
 
   .buttons {
