Finish registration, start confirmation

--- a/home/templates/home/done.html
+++ b/home/templates/home/done.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Thank you for registering!</h1>
 <p>
-  A confirmation URL has been sent to your email.
+  A confirmation URL has been sent to <span class="red">{{ email }}</span>.
   Click on the link or paste it into your browser's search bar to confirm your account.
 </p>
 {% endblock %}
