--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -1,3 +1,21 @@
 {% extends "shared/base.html" %}
 
-
+{% block content %}
+<div id="login">
+  <h2>Log in</h2>
+  <p>
+    Sign into your account take the surveys.
+    If you haven't yet confirmed your email, you will be prompted to do so.
+  </p>
+  <form name="login" class="halves">
+    <div class="half">
+      <input id="email" name="email" type="text" placeholder="me@example.com">
+      <label for="email">Email</label>
+    </div>
+    <div class="half">
+      <input id="password" name="password" type="password" placeholder="secret">
+      <label for="password">Password</label>
+    </div>
+  </form>
+</div>
+{% endblock %}
