--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -16,7 +16,7 @@
 <br>
 <form id="register" method="post" action="#">
   {% csrf_token %}
-  <div id="name">
+  <div id="name" class="halves">
     <div class="half">
       <input id="first_name" name="first_name" type="text" placeholder="First" value="{{ form.first_name.value|default_if_none:"" }}">
       <label for="first_name">First name</label>
@@ -26,12 +26,12 @@
       <label for="last_name">Last name</label>
     </div>
   </div>
-  <div id="about">
+  <div id="about" class="halves">
     <div class="half">
       <input id="email" name="email" type="text" placeholder="me@example.com" value="{{ form.email.value|default_if_none:"" }}">
       <label for="email">Email</label>
     </div>
-    <div id="age-sex" class="half">
+    <div id="age-sex" class="half halves">
       <div>
         <input id="age" name="age" type="text" placeholder="Years" value="{{ form.age.value|default_if_none:"" }}">
         <label for="age">Age</label>
@@ -45,7 +45,7 @@
       </div>
     </div>
   </div>
-  <div id="passwords">
+  <div id="passwords" class="halves">
     <div class="half">
       <input id="password1" name="password1" type="password" placeholder="Secret">
       <label for="password1">Password of at least eight characters</label>
@@ -59,5 +59,7 @@
     <button id="submit" type="submit" disabled>Submit</button>
   </div>
 </form>
+<script type="text/javascript" src="{% static "js/event.js" %}"></script>
+<script type="text/javascript" src="{% static "js/validation.js" %}"></script>
 <script type="text/javascript" src="{% static "js/forms/register.js" %}"></script>
 {% endblock %}
