--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -47,11 +47,11 @@
   </div>
   <div id="passwords" class="halves">
     <div class="half">
-      <input id="password1" name="password1" type="password" placeholder="Secret">
+      <input id="password1" name="password1" type="password" placeholder="A Secret">
       <label for="password1">Password of at least eight characters</label>
     </div>
     <div class="half">
-      <input id="password2" name="password2" type="password" placeholder="Secret">
+      <input id="password2" name="password2" type="password" placeholder="A Secret">
       <label for="password2">Confirm password</label>
     </div>
   </div>
