--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -12,7 +12,7 @@
   <body>
     {% block navigation %}
     <div id="navigation">
-      <span class="red">USC Face Study</span>
+      <span class="red"><a href="{% url "home:index" %}">USC Face Study</a></span>
       <span>About</span>
       <span>Contact</span>
       <div class="right">
