--- a/home/static/css/base.scss
+++ b/home/static/css/base.scss
@@ -13,7 +13,7 @@ body {
 #navigation {
   font-size: 20px;
   width: 100%;
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
 
   a {
     color: inherit;
@@ -39,6 +39,10 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-weight: inherit;
+}
+
+h1 {
+  font-size: 42px;
 }
 
 ul {
