--- a/home/templates/home/unconfirmed.html
+++ b/home/templates/home/unconfirmed.html
@@ -1,7 +1,10 @@
 {% extends "shared/base.html" %}
 
 {% block content %}
-<h1>You must confirm your email before taking the surveys!</h1>
+<h1>Email unconfirmed</h1>
+<p>
+  You must verify the email address you provided before taking the surveys!
+</p>
 <p>
   A confirmation URL has been sent to <span class="red">{{ email }}</span>.
   Click on the link or paste it into your browser's search bar to confirm your account.
