--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -18,11 +18,11 @@
       <div class="right">
         {% if user.is_staff %}
         <span><a>Dashboard</a></span>
-        <span><a>Logout</a></span>
+        <span><a href="{% url "home:logout" %}">Logout</a></span>
         {% elif user.is_authenticated%}
         <span><a>Tests</a></span>
         <span><a>Account</a></span>
-        <span><a>Logout</a></span>
+        <span><a href="{% url "home:logout" %}">Logout</a></span>
         {% else %}
         <span><a href="{% url "home:register" %}">Register</a></span>
         <span><a href="{% url "home:login" %}">Login</a></span>
