--- a/home/static/css/base.scss
+++ b/home/static/css/base.scss
@@ -2,7 +2,7 @@
 @import 'forms';
 
 body {
-  width: 800px;
+  width: 920px;
   margin: 6rem auto;
   font-family: $font;
   font-size: 20px;
@@ -18,6 +18,7 @@ body {
   a {
     color: inherit;
     text-decoration: none;
+    font-weight: inherit;
   }
 
   span {
@@ -39,11 +40,17 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-weight: inherit;
+  margin-top: 24px;
+  margin-bottom: 12px;
 }
 
-h1 {
-  font-size: 42px;
+ol, ul, p {
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
-ul {
+a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: normal;
 }
