--- a/tests/templates/tests/results.html
+++ b/tests/templates/tests/results.html
@@ -1,6 +1,5 @@
 {% extends "shared/base.html" %}
 
 {% block content %}
-<h2>The USC Face Study</h2>
-Welcome to the USC Face Study.
+<h1>Hello, world </h1>
 {% endblock %}
